--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-web": "~0.18.7",
     "react-native-paper": "4.9.2",
     "@expo/vector-icons": "^13.0.0",
-    "expo-constants": "~13.2.4"
+    "expo-constants": "~13.2.4",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
