--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.4",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.4",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.8",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "expo": "^46.0.16",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
+    "expo": "^48.0.0",
+    "expo-constants": "~14.2.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "^0.16.4",
     "firebase": "^9.6.11",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.9",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-constants": "~13.2.4",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
